feat: 完成灵珑框架全链路功能增强与稳定性优化
本次提交包含多项核心功能升级与问题修复：
1. 新增审计管理器模块，支持异步审计日志与可配置溢出策略
2. 重构事件总线，添加阻塞/丢弃两种溢出策略与完整指标暴露
3. 完善类加载器文档，补充JDK17+强封装适配说明
4. 新增JDK版本兼容性检测，自动提示缺失的JVM启动参数
5. 优化Native运行时关闭流程，实现对称生命周期管理
6. 重构Dashboard激活逻辑，修复状态聚合不一致问题
7. 新增多套契约测试与并发卸载集成测试
8. 新增事件管道监控接口，支持观测事件队列健康状态
9. 补充benchmark产物gitignore规则